# intel-qs

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  LICENSE.md  README.md  docker_build  make.inc  makefile  makefile.sdk  setup.py
benchmarks/: CMakeLists.txt  basic_code_for_scaling.cpp  script_pcl.sh  script_strong_scaling.sh  script_weak_scaling.sh  specv2_bench.cpp
benchmarks/output/: .gitignore
cmake/: ExternalProject.cmake
docs/: Makefile  directory_structure.md  docker_guide.md  doxy-html.config  install_guide.md  requirements.txt  todo_list.md
examples/: CMakeLists.txt  benchgates.cpp  circuit_with_noise_gates.cpp  communication_reduction_via_qubit_reordering.cpp  expect_value_test.cpp  get_started_examples.ipynb  get_started_with_IQS.cpp  get_started_with_noisy_IQS.cpp  grover_4qubit.cpp  heisenberg_dynamics.cpp  launcher_all_examples.sh  noise_via_chi_matrix.cpp  noisy_circuit_test.cpp  python_script.py  qaoa_example.ipynb  quantum_fourier_transform.cpp  test_of_custom_gates.cpp  test_of_ncu_gates.cpp
examples/python/: python_script.py
include/: GateCache.hpp  NoisyQureg.hpp  QubitRegisterMetric.hpp  alignedallocator.hpp  bitops.hpp  chi_matrix.hpp  conversion.hpp  gate_counter.hpp  gate_spec.hpp  highperfkernels.hpp  interface_api_memory.h  interface_api_qubitid.h  mat_ops.hpp  mpi_env.hpp  mpi_exception.hpp  mpi_utils.hpp  ncu.hpp  permutation.hpp  permute.hpp  qaoa_features.hpp  qureg.hpp  qureg_version.hpp  rng_utils.hpp  spec_kernels.hpp  timer.hpp  tinymatrix.hpp  utils.hpp
interface/: intelqs_interface_main.cpp  interface_api_memory.cpp  interface_api_memory.h  interface_api_qasm.cpp  interface_api_qasm.h  interface_api_qubitid.cpp  interface_api_qubitid.h  interface_api_version.cpp  interface_api_version.h  makefile  qhipster_interface_main.cpp
interface/src/: CMakeLists.txt  intelqs_interface_main.cpp  interface_api_memory.cpp  interface_api_qasm.cpp  interface_api_version.cpp
notebooks/: basic_script.py  chi-matrix-with-mpi.py  chi_matrix_with_mpi.py  get_started_examples.ipynb  mpi_barrier.py  noise_via_chi_matrix_example.ipynb  print_distributed_state.py  python_mpi.py  python_script.py  qaoa_example.ipynb
pybind11/: CMakeLists.txt  intelqs_py.cpp
python/: CMakeLists.txt  intelqs_py.cpp
qureg/: NoisyQureg.hpp  QbitRegisterMetric.hpp  QubitRegisterMetric.hpp  highperfkernels.cpp  highperfkernels.hpp  makefile  permute.hpp  qureg.hpp  qureg_apply1qubitgate.cpp  qureg_apply2qubitgate.cpp  qureg_applyctrl1qubitgate.cpp  qureg_applydiag.cpp  qureg_applyswap.cpp  qureg_applytoffoli.cpp  qureg_expectval.cpp  qureg_fusion.cpp  qureg_init.cpp  qureg_measure.cpp  qureg_noisysimul.cpp  qureg_permute.cpp  qureg_utils.cpp  qureg_version.cpp  qureg_version.hpp
src/: CMakeLists.txt  chi_matrix.cpp  gate_spec.cpp  highperfkernels.cpp  intelqs_interface_main.cpp  interface_api_qasm.cpp  interface_api_version.cpp  mpi_env.cpp  mpi_exception.cpp  qaoa_features.cpp  qureg_apply1qubitgate.cpp  qureg_apply2qubitgate.cpp  qureg_apply_channel.cpp  qureg_applyctrl1qubitgate.cpp  qureg_applydiag.cpp  qureg_applyswap.cpp  qureg_applytoffoli.cpp  qureg_expectval.cpp  qureg_fusion.cpp  qureg_init.cpp  qureg_measure.cpp  qureg_ncu.cpp  qureg_noisysimul.cpp  qureg_permute.cpp  qureg_utils.cpp  qureg_version.cpp  rng_utils.cpp  spec_kernels.cpp  utils.cpp
tests/: .gitignore  benchgates.cpp  build.csh  expect_value_test.cpp  getting_started_example.cpp  makefile  noisy_circuit_test.cpp  qft_test.cpp  sbatchscript.edison.36qubits.sh  single_qubit_gates_test.cpp  testgates.cpp
tutorials/: CMakeLists.txt  basic_use_presentation.ipynb  get_started_with_IQS.cpp  get_started_with_IQS.ipynb  get_started_with_noisy_IQS.cpp  get_started_with_noisy_IQS.py
tutorials/.ipynb_checkpoints/: get_started_with_IQS-checkpoint.ipynb
tutorials/presentation_ieee_quantum_week_2021/: iqs_qaoa_and_noise.ipynb
unit_test/: CMakeLists.txt  import_iqs.py  mpi_env_test.cpp  mpi_speedup_test.cpp  openmp_test.cpp  suite_of_tests.cpp
unit_test/include/: apply_1q_gate_test.hpp  apply_ncu_test.hpp  apply_swap_gate_test.hpp  chi_matrix_test.hpp  chunking_communication_test.hpp  compiler_flags_test.hpp  conversion_test.hpp  expectation_values_test.hpp  extra_features_test.hpp  gate_counter_test.hpp  measure_test.hpp  multiple_states_test.hpp  noisy_simulation_test.hpp  one_qubit_register_test.hpp  permutation_test.hpp  qaoa_features_test.hpp  qureg_apply_channel.hpp  qureg_permute_test.hpp  random_number_generator_test.hpp  single_qubit_gates_test.hpp  state_initialization_test.hpp  tinymatrix_test.hpp  two_qubit_register_test.hpp  utility_methods_test.hpp
util/: alignedallocator.hpp  alignedallocator_test.cpp  bitops.hpp  bitops_btest.cpp  bitops_test.cpp  blas_test.cpp  conversion.hpp  conversion_test.cpp  gate_counter.hpp  makefile  (+23 more)
util/BigMPI/: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE  Makefile.am  README.md  VERSION  autogen.sh  configure.ac
util/BigMPI/src/: CMakeLists.txt  bigmpi.h  bigmpi_impl.h  collectives_x.c  fileio_x.c  likely.h  neighborhood_collectives_x.c  reductions_x.c  rma_x.c  sendrecv_x.c  type_contiguous_x.c  type_hindexed_x.c  utils.c  vcollectives_x.c
util/BigMPI/test/: CMakeLists.txt  Makefile.mk  README.md  test_allgather_x.c  test_allreduce_x.c  test_alltoall_x.c  test_assert_x.c  test_bcast_x.c  test_contig_x.c  test_factorize.c  test_gather_x.c  test_irsend_irecv_x.c  test_isend_irecv_x.c  test_issend_irecv_x.c  test_reduce_x.c  test_rma2_x.c  test_rma_x.c  test_rsend_recv_x.c  test_scatter_x.c  test_send_recv_x.c  test_sendrecv_x.c  test_ssend_recv_x.c  verify_buffer.h
util/BigMPI/test/devel/: Makefile.mk  README.md  aint_overflow.c  in_place_user_def_reduce.c  preprocessor.c  rounding.c  type_create_struct.c
util/BigMPI/test/mpi/: Makefile.mk  README.md  bcast.c  reduce_scatter.c  scatterv.c
util/BigMPI/test/perf/: Makefile  reductions.c  typecontig.c  typepiggy.c
util/BigMPI/travis/: build-run.sh  install-autotools.sh  install-mpi.sh
(+1044 files in other folders)
